# ecco

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  ReadMe.md  pullIn.cpp
lib/appdelegate/: AppDelegate.cpp  AppDelegate.hpp
lib/ecco/: EccoManager.cpp  EccoManager.hpp  EccoObject.cpp  EccoObject.hpp  EccoOutcome.hpp  EccoProduct.hpp
lib/eventSystem/: EccoEvent.cpp  EccoEvent.hpp  EventDispatcher.hpp
lib/glWrappers/: Attachment.hpp  AttachmentManager.cpp  AttachmentManager.hpp  FrameBuffer.hpp  FrameBufferManager.cpp  FrameBufferManager.hpp  GLBuffers.cpp  GLBuffers.hpp  GLBuffers.tpp  GLTypes.hpp  GLUtils.hpp  VAOModel.cpp  VAOModel.hpp
lib/materials/: Material.hpp
lib/sceneModel/: Model.hpp  ModelManager.cpp  ModelManager.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneNode.cpp  SceneNode.hpp
lib/shaderManager/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  UniformTypes.hpp
lib/turbo-ui/: PrePostTestView.cpp  PrePostTestView.hpp  TurboView.cpp  TurboView.hpp
lib/utils/: BBox.hpp  GLMUtils.hpp  assertMacros.hpp
shaders/general/: frag-Frag.glsl  vert-Vertex.glsl
